--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 		<div>
 			<ul class="nav nav-justified">
 				<li id="home"><a href="#" class="selected"><span class="buttonLine selected"></span> Home </a></li>
-				<li id="somos" class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"><span class="buttonLine"></span>	Quienes somos 
-					</a><ul class="dropdown-menu col-xs-11 col-sm-12" role="menu"><li id="contacto"><a href="#"><span class="buttonLine"></span>Contacto</a></li></ul>	
+				<li id="somos" class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#somos" role="button" aria-expanded="false"><span class="buttonLine"></span>	Quienes somos 
+					</a><ul class="dropdown-menu col-xs-11 col-sm-12" role="menu"><li id="contacto"><a href="#contacto"><span class="buttonLine"></span>Contacto</a></li></ul>	
 				</li>
-				<li id="que_ha"><a href="#"><span class="buttonLine"></span> Que hacemos</a></li>
+				<li id="que_ha"><a href="#que_ha"><span class="buttonLine"></span> Que hacemos</a></li>
 			</ul>
 		</div> 
 	</script>
