Relocate image preloader to head.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script type="text/javascript">
+		if (document.images) {
+			[
+			 'http://sq.uy/images/sq_logo.png',
+			 'http://sq.uy/images/index_main_image.jpg',
+			 'http://sq.uy/images/cuti.png',
+			 'http://sq.uy/images/cie.jpg',
+			 'http://sq.uy/images/da_vinci.jpg'
+			].forEach(function(s) {i=new Image(); i.src=s});
+		}
+	</script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.18/require.min.js" data-main="js/main" ></script>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css"></link>
 	<meta charset="UTF-8">
 </head>
 <body>
-	<div class="preload">
-		<script type="text/javascript">
-			if (document.images) {
-				[
-				 'http://sq.uy/images/sq_logo.png',
-				 'http://sq.uy/images/index_main_image.jpg',
-				 'http://sq.uy/images/cuti.png',
-				 'http://sq.uy/images/cie.jpg',
-				 'http://sq.uy/images/da_vinci.jpg'
-				].foreach(function(s) {i=new Image(); img.src=s});
-			}
-		</script>
-	</div>
 	<script id="layout_view_template" type="text/template">
 		<div id="allLayout" class="container">
 			<div id="head"></div>
